Closed
Bug 207036
Opened 23 years ago
Closed 22 years ago
Black line (halve box) above the flash plugin shouldn't be there.
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: onno.timmerman, Assigned: blizzard)
References
()
Details
Attachments
(3 files)
|
120.04 KB,
image/png
|
Details | |
|
174.69 KB,
image/png
|
Details | |
|
683 bytes,
patch
|
blizzard
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030508
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4b) Gecko/20030508
In early version of mozilla nor in IE is there a black line above and left from
the flash box. Shouldn't be there
Reproducible: Always
Steps to Reproduce:
1. just surf to www.essential.be
2.
3.
Expected Results:
all should be with
Comment 1•23 years ago
|
||
*** Bug 207037 has been marked as a duplicate of this bug. ***
Comment 3•23 years ago
|
||
WORKSFORME on Windows 2000 using a build one day newer than the reporter.
Comment 4•23 years ago
|
||
WFM 2003052504 winXP
I see the black half-box too, using Flash 6 r69. The fault is visible on quite
a few other pages, including my own home page (http://www.sys3175.co.uk). For me
the fault crept in around Linux Mozilla 1.2a and has been present since. I
haven't yet found out what makes it happen, but I suspect some sort of
interaction between Flash 6 Linux and Flash 5 animations.
Just tried upgrading, but the problem persists with Flash 6 r79. I'm using the
RedHat 8 gtk2 build.
An sample screenshot. The same strange border appears on many other flash
animations on other sites.
Comment 9•22 years ago
|
||
Same thing for me, but when I change to galeon, konqueror or firebird it works
fine. It's just mozilla with the flash problem.
Comment 10•22 years ago
|
||
This bug appears in any versions of Mozilla built with XFT enabled. Could this
be a problem with anti-aliasing? This also appears in versions of Epiphany,
Galeon, or Firebird built on Mozilla with XFT enabled.
The problem shows up whenever viewing any flash animations. I am using
mozilla-1.4-12 on Redhat 9 Severn, and have tested using mozilla-1.4-3 on Debian
3.0 with the same result.
Any new news would be greatly appreciated.
Comment 11•22 years ago
|
||
I'm getting also a black line with another plugin, like the Java plugin. I've
attached a screenshot of a page with that happening (besides, the Java plugin
doesn't work for me). If I'm not wrong, the black line appears with any plugin
sub-area, not just the Flash one. For instance, I get it with the mplayer
plugin too.
By the way, I'm using Debian Sid, and the browser shown is epiphany...
Comment 12•22 years ago
|
||
Please review and commit. Thanks!
Comment 13•22 years ago
|
||
This is not a bug in layout, but in the gtkxtbin widget of the GTK-2 frontend.
Therefore I forwarded this to pavlov@pavlov.net and blizzard@redhat.com, who are
responsible for gtkxtbin.
On some systems Xt draws an one pixel wide border around new containers by
default, causing the black lines/box to appear; The attached patch sets the
container widget's border width explicitly to zero.
Please review and commit the patch I submitted above and mark #207036 (this) and
#223586 (duplicate) as RESOLVED.
(This descriptions should have been commited along with the patch directly,
sorry for any inconvenience)
*** Bug 223586 has been marked as a duplicate of this bug. ***
Attachment #139515 -
Flags: review?(blizzard)
Comment 15•22 years ago
|
||
This bug has been around for quite some time in both Mozilla proper and
Firebird/Firefox. I tried Firefox 0.8 gtk2+xft with the latest Flash plugin and
not only is the annoying black line still there, both the Flash plugin and Java
plugin run very slowly.
(In reply to comment #13)
> This is not a bug in layout, but in the gtkxtbin widget of the GTK-2 frontend.
> Therefore I forwarded this to pavlov@pavlov.net and blizzard@redhat.com, who are
> responsible for gtkxtbin.
>
> On some systems Xt draws an one pixel wide border around new containers by
> default, causing the black lines/box to appear; The attached patch sets the
> container widget's border width explicitly to zero.
>
> Please review and commit the patch I submitted above and mark #207036 (this) and
> #223586 (duplicate) as RESOLVED.
>
> (This descriptions should have been commited along with the patch directly,
> sorry for any inconvenience)
>
Comment 16•22 years ago
|
||
Sorry, this is the first time I've ever used this bug tracking thing. I forgot
to mention, I'm running Mandrake 9.2 but I've had the problem with 9.0 and 9.1
as well with every version of Mozilla I've ever tried.
(In reply to comment #13)
> This is not a bug in layout, but in the gtkxtbin widget of the GTK-2 frontend.
> Therefore I forwarded this to pavlov@pavlov.net and blizzard@redhat.com, who are
> responsible for gtkxtbin.
>
> On some systems Xt draws an one pixel wide border around new containers by
> default, causing the black lines/box to appear; The attached patch sets the
> container widget's border width explicitly to zero.
>
> Please review and commit the patch I submitted above and mark #207036 (this) and
> #223586 (duplicate) as RESOLVED.
>
> (This descriptions should have been commited along with the patch directly,
> sorry for any inconvenience)
>
Attachment #139515 -
Flags: superreview+
Comment 17•22 years ago
|
||
Could you please not quote the entire comment unless you are specifically making
replies to specific issues? We can see the comment right above, we don't need
multiple copies of it...
| Assignee | ||
Updated•22 years ago
|
Attachment #139515 -
Flags: review?(blizzard) → review+
| Assignee | ||
Updated•22 years ago
|
Assignee: core.layout → blizzard
Status: UNCONFIRMED → NEW
Component: Layout → XP Toolkit/Widgets
Ever confirmed: true
| Assignee | ||
Comment 18•22 years ago
|
||
*** Bug 193430 has been marked as a duplicate of this bug. ***
Comment 19•22 years ago
|
||
*** Bug 236455 has been marked as a duplicate of this bug. ***
Comment 20•22 years ago
|
||
Why this patch has not been checked in yet?
| Assignee | ||
Comment 21•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 22•22 years ago
|
||
*** Bug 237359 has been marked as a duplicate of this bug. ***
Comment 23•22 years ago
|
||
*** Bug 241726 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•