Bug #207036.  Black line above the flash plugin shouldn't be there.  Make sure to set the border width to zero in Xt.  Patch from Klaus Stengel.  r=blizzard,sr=dbaron